# tg_botik

./: .env  .gitignore  ARCHITECTURE_PROBLEMS.md  Dockerfile  PYDANTIC_MODELS_EXAMPLE.md  README.md  REFACTORING_GUIDE.md  TODO_FOR_JUNIOR.md  main.py  pyproject.toml  test.py
migration/: env.py
migration/versions/: 0cfe5dd4d44b_init.py  17a919426081_add_new_models_like_and_matches.py  5f77196719a7_add_new_model_username.py  673dde08d2cc_add_photo_id_and_gender_interest.py  6f3fa2e0f929_add_status_of_the_questionnaire_to_users.py  b605c0ed54d2_new_table_reports.py  b9b301fbc557_make_fields_nullable.py  cc2442976a16_change_tg_id_to_bigint.py  d5031ae4a770_make_fields_nullable1.py  ea65cccdc3d8_initial_revision.py  f8bc97a1487b_initial_revision.py
src/: application.py  config.py  database.py  logger.py  main.py
src/bot/dao/: base.py  like.py  report.py  user.py
src/bot/enum/: gender.py  like.py  user_profile.py
src/bot/handlers/: questionnaire.py  start.py  swipe.py  user_profile.py
src/bot/keyboards/: dating.py  questionnaire.py  swipe.py  user_profile.py
src/bot/llm_service/: __init__.py  client.py  moderation.py
src/bot/models/: gender.py  like.py  report.py  responses.py  user.py
src/bot/presenters/: __init__.py  swipe.py  user_profile.py
src/bot/services/: __init__.py  questionnaire.py  swipe.py  user_profile.py
src/bot/states/: form_states.py  swipe_states.py
src/core/: database.py
src/dao/: base.py
src/likes/: dao.py  models.py
src/tg_bot/: bot.py
src/users/: dao.py  models.py
tests/: check_proxy.py  test_llm.py
(+1 files in other folders)
